        - Fix failure to detect stable order criteria when in iterator
          mode of a has_many prefetch off a search_related chain
        - Prevent erroneous database hit when accessing prefetched related
          resultsets with no rows
        - Fix incorrect handling of custom relationship conditions returning
          SQLA literal expressions
        - Fix multi-value literal populate not working with simplified bind
          specifications
        - Massively improve the implied resultset condition parsing - now all
          applicable conditions within a resultset should be properly picked
          up by create() and populate()
        - Ensure definitive condition extractor handles bizarre corner cases
          without bombing out (RT#93244)
        - Fix set_inflated_column incorrectly handling \[] literals (GH#44)
        - Ensure that setting a column to a literal invariably marks it dirty
        - Work around exception objects with broken string overloading in one
          additional codepath (missed in 0.08260)
        - Fix inability to handle multiple consecutive transactions with
          savepoints on DBD::SQLite < 1.39

    * Misc
        - Ensure source metadata calls always take place on the result source
          instance registered with the caller
        - IFF DBIC_TRACE output defaults to STDERR we now silence the possible
          wide-char warnings if the trace happens to contain unicode
        - Remove ::ResultSource::resolve_condition - the underlying machinery
          is in flux, and the method has had a deprecation warning for 5 years

0.08270 2014-01-30 21:54 (PST)
    * Fixes
        - Fix 0.08260 regression in DBD::SQLite bound int handling. Inserted
          data was not affected, but any function <=> integer comparison would
          have failed (originally fixed way back in 0e773352)
        - Fix failure to load DateTime formatter when connecting to Firebird
          over ODBC

    * Misc